fixing bug shown on mobile screen for about.html

--- a/scss/_mobile.scss
+++ b/scss/_mobile.scss
@@ -84,7 +84,7 @@
   }
 
   main {
-    padding: 2.5rem;
+    padding: 1.5rem;
   }
 
   form .input {
